Crash: Smooth brush in Surface mode with Anchored Stroke Method #94635

Closed
opened 2022-01-04 14:47:35 +01:00 by Floatharr · 13 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557

Short description of error
The smooth brush in sculpt mode with deformation set to Surface and Stroke Method set to Anchored crashes Blender. Tested in latest 3.1 alpha, and 3.0, 2.93, and 2.91

Exact steps for others to reproduce the error

Factory startup:

  • Change to sculpt mode
  • Switch to Smooth Brush
  • Change Deformation to Surface
  • Change Stroke Method to Anchored
  • Click and drag on the default cube

AJAMD6S2LY.mp4

blender_system_info.txt

blender.crash.txt

blender_debug_output.txt

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` **Short description of error** The smooth brush in sculpt mode with deformation set to Surface and Stroke Method set to Anchored crashes Blender. Tested in latest 3.1 alpha, and 3.0, 2.93, and 2.91 **Exact steps for others to reproduce the error** Factory startup: - Change to sculpt mode - Switch to Smooth Brush - Change Deformation to Surface - Change Stroke Method to Anchored - Click and drag on the default cube [AJAMD6S2LY.mp4](https://archive.blender.org/developer/F12788534/AJAMD6S2LY.mp4) [blender_system_info.txt](https://archive.blender.org/developer/F12788533/blender_system_info.txt) [blender.crash.txt](https://archive.blender.org/developer/F12788532/blender.crash.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F12788531/blender_debug_output.txt)
Author

Added subscriber: @Floatharr

Added subscriber: @Floatharr

Added subscriber: @havockm9

Added subscriber: @havockm9
markH self-assigned this 2022-01-04 14:59:25 +01:00

Crash replicated on:

Linux - Blender stable 3.0
Windows 10 - Blender 3.0 stable

Crash replicated on: Linux - Blender stable 3.0 Windows 10 - Blender 3.0 stable

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm, crash on NULL dereference.

>	blender.exe!sub_v3_v3v3(float * r, const float * a, const float * b) Line 497	C

 	blender.exe!SCULPT_surface_smooth_laplacian_step(SculptSession * ss, float * disp, const float * co, float[3] * laplacian_disp, const int v_index, const float * origco, const float alpha) Line 431	C
 	blender.exe!SCULPT_do_surface_smooth_brush_laplacian_task_cb_ex(void * userdata, const int n, const TaskParallelTLS * tls) Line 495	C
 	blender.exe!BLI_task_parallel_range(const int start, const int stop, void * userdata, void(*)(void *, const int, const TaskParallelTLS *) func, const TaskParallelSettings * settings) Line 140	C++
 	blender.exe!SCULPT_do_surface_smooth_brush(Sculpt * sd, Object * ob, PBVHNode * * nodes, int totnode) Line 562	C
 	blender.exe!do_brush_action(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups) Line 3296	C
 	blender.exe!do_tiled(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action) Line 3739	C
 	blender.exe!do_symmetrical_brush_actions(Sculpt * sd, Object * ob, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action, UnifiedPaintSettings * ups) Line 3822	C
 	blender.exe!sculpt_stroke_update_step(bContext * C, PaintStroke * UNUSED_stroke, PointerRNA * itemptr) Line 5191	C
 	blender.exe!paint_brush_stroke_add_step(bContext * C, wmOperator * op, const float * mouse_in, float pressure) Line 637	C
 	blender.exe!paint_stroke_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 1558	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2217	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3081	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3129	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3617	C
 	blender.exe!WM_main(bContext * C) Line 642	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 565	C
 	[External Code]	
Can confirm, crash on NULL dereference. ``` > blender.exe!sub_v3_v3v3(float * r, const float * a, const float * b) Line 497 C blender.exe!SCULPT_surface_smooth_laplacian_step(SculptSession * ss, float * disp, const float * co, float[3] * laplacian_disp, const int v_index, const float * origco, const float alpha) Line 431 C blender.exe!SCULPT_do_surface_smooth_brush_laplacian_task_cb_ex(void * userdata, const int n, const TaskParallelTLS * tls) Line 495 C blender.exe!BLI_task_parallel_range(const int start, const int stop, void * userdata, void(*)(void *, const int, const TaskParallelTLS *) func, const TaskParallelSettings * settings) Line 140 C++ blender.exe!SCULPT_do_surface_smooth_brush(Sculpt * sd, Object * ob, PBVHNode * * nodes, int totnode) Line 562 C blender.exe!do_brush_action(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups) Line 3296 C blender.exe!do_tiled(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action) Line 3739 C blender.exe!do_symmetrical_brush_actions(Sculpt * sd, Object * ob, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action, UnifiedPaintSettings * ups) Line 3822 C blender.exe!sculpt_stroke_update_step(bContext * C, PaintStroke * UNUSED_stroke, PointerRNA * itemptr) Line 5191 C blender.exe!paint_brush_stroke_add_step(bContext * C, wmOperator * op, const float * mouse_in, float pressure) Line 637 C blender.exe!paint_stroke_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 1558 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2217 C blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3081 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3129 C blender.exe!wm_event_do_handlers(bContext * C) Line 3617 C blender.exe!WM_main(bContext * C) Line 642 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 565 C [External Code] ```

@havockm9 do you plan to fix this since you claimed the task?

@havockm9 do you plan to fix this since you claimed the task?
markH removed their assignment 2022-01-06 08:05:56 +01:00

Sorry, first time posting here.
I am not able to work on the task.
Thank you.

Sorry, first time posting here. I am not able to work on the task. Thank you.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2022-01-06 08:46:33 +01:00
Member

Will check

Will check

This issue was referenced by 9336edd060

This issue was referenced by 9336edd060200755c2160844cbfae144556de6f8

This issue was referenced by 3ae664363d

This issue was referenced by 3ae664363d182eab398bdd7d367b3f48e8d04af1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94635
No description provided.